学习性项目准备重构